--- a/Contributors.html
+++ b/Contributors.html
@@ -2054,6 +2054,11 @@
                 "id": 366,
                 "fullname": "Dulya Perera",
                 "username": "https://github.com/Dulyaaa"
+            },
+            {
+                "id": 367,
+                "fullname": "Gaurav Sharma",
+                "username": "https://github.com/grvsh02"
             }
         ];
 
