--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <script src="https://kit.fontawesome.com/d9f7ec7b29.js" crossorigin="anonymous"></script>
     <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
-    <title>Hacktoberfest 2022 - Contributors</title>
+    <title>Hacktoberfest 2022 - Contributors Helpless Thor</title>
     <style>
         .hidden {
             display: none;
