--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         .st0 {
             fill: #FF0844;
         }
+        
     </style>
 
 
@@ -105,7 +106,7 @@
     </nav>
     <div class="content">
         <div class="container">
-            <span class="heading">CONTRIBUTORS </span>
+            <span class="heading"><b>CONTRIBUTORS</b> </span>
 
             <div class="heart"></div>
 
@@ -136,7 +137,7 @@
     <!-- Please maintain the alignment... -->
     <div class="box mx-auto my-5 justify-content-center">
         <a data-aos="zoom-in-down" class="btn btn-outline-secondary btn-lg load-more" onclick="loadMore()"
-            id="loadMore">Load More</a>
+            id="loadMore"><u>Load More</u></a>
     </div>
     </div>
     </div>
@@ -148,8 +149,8 @@
     </div>
     <footer>
         <div class="footer-content">
-            <h3>Hacktoberfest 2022</h3>
-            <p>This Project is participating in Hacktoberfest. Copyright &copy; 2022</p>
+            <h3><i>Hacktoberfest 2022</i></h3>
+            <p>This Project is participating in <b>Hacktoberfest</b>. Copyright &copy; 2022</p>
            
             <div class="footer-menu">
             <ul class="socials">
@@ -159,6 +160,7 @@
                 <li><a href="https://www.instagram.com/fineanmol"><i class="fa fa-youtube"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/fineanmol/"><i class="fa fa-linkedin-square"></i></a></li>
             </ul>
+            </div>
         </div>
     </footer>
     <script>
