Should fix profile images
the image resources are available at github.com/${username}.png

This with my fix for the links should take care of things

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             document.querySelectorAll('a.box-item').forEach(con => {
                 // console.log(con.href)
-                con.innerHTML += `<img loading="lazy" src="https://avatars.githubusercontent.com/${con.href.split('https://github.com/')[1]}">`
+                con.innerHTML += `<img loading="lazy" src="https://github.com/${con.href.split('https://github.com/')[1]}.png">`
             })
 
             document.getElementById('loading').setAttribute('hidden', true)
